--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -77,13 +77,13 @@
                     <div class="card">
                       <div class="card-block">
                         <div class="row">
-                          <div class="col-lg-4 col-md-6 col-sm-12">
+                          <div class="col-sm-6">
                             <fieldset class="form-group mb-0">
                               <label class="form-label semibold" for="">Quatidade de unidades</label>
                               <input type="text" class="form-control" id="" placeholder="000">
                             </fieldset>
                           </div>
-                          <div class="col-lg-4 col-md-6 col-sm-12">
+                          <div class="col-sm-6">
                             <label class="form-label semibold" for="">Certificado</label>
                             <div class="form-group">
                               <div class="btn-group btn-group-sm" data-toggle="buttons">
@@ -100,7 +100,26 @@
                               </div>
                             </div>
                           </div>
-                          <div class="col-lg-4 col-md-12">
+                        </div>
+                        <div class="row divider-top">
+                          <div class="col-sm-6">
+                            <label class="form-label semibold" for="">Material Didático a definir</label>
+                            <div class="form-group">
+                              <div class="btn-group btn-group-sm" data-toggle="buttons">
+                                <label class="btn btn-secondary-outline active">
+                                  <input type="radio" name="options" id="option3" autocomplete="off" checked="">
+                                  Todos
+                                </label>
+                                <label class="btn btn-secondary-outline">
+                                  <input type="radio" name="options" id="option1" autocomplete="off"> Sim
+                                </label>
+                                <label class="btn btn-secondary-outline">
+                                  <input type="radio" name="options" id="option2" autocomplete="off"> Não
+                                </label>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-sm-6">
                             <label class="form-label semibold" for="">Situação</label>
                             <div class="form-group">
                               <div class="btn-group btn-group-sm" data-toggle="buttons">
@@ -417,7 +436,7 @@
                   <table class="table table-hover">
                     <tbody>
                     <tr>
-                      <td><p><img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time
+                      <td class="b-t-0"><p><img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time
                         Zones 1A
                         -
                         (Combo
