--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -79,8 +79,8 @@
                     <div class="row">
 
                       <div class="col-sm-5">
-                        <label class="form-label semibold" for="">Nome do posto avançado</label>
-                        <input type="text" class="form-control" aria-label="" placeholder="Nome do posto avançado">
+                        <label class="form-label semibold" for="">Nome</label>
+                        <input type="text" class="form-control" aria-label="" placeholder="Nome">
                       </div>
                       <div class="col-sm-3">
                         <label class="form-label semibold" for="">Unidade</label>
@@ -150,11 +150,11 @@
                     <table class="datatable-on table table-hover" cellspacing="0" width="100%">
                       <thead>
                       <tr>
-                        <th>Nome do posto</th>
+                        <th>Nome</th>
                         <th>Unidade</th>
-                        <th>Situação</th>
                         <th>Gestor principal</th>
                         <th>Telefone</th>
+                        <th>Situação</th>
                         <th class="text-right">Ações</th>
                       </tr>
                       </thead>
@@ -164,9 +164,9 @@
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaPosto"
                                        href="#ModalDetalhaPosto">Leonardo Da Vinci</a></strong></td>
                         <td>Asa sul</td>
-                        <td>Ativo</td>
                         <td>João Carlos Silva</td>
                         <td>(61) 0000-0000</td>
+                        <td>Ativo</td>
                         <td>
                           <div class="btn-group btn-group-sm pull-right">
                             <button type="button" class="btn btn-default-outline dropdown-toggle"
@@ -189,9 +189,9 @@
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaPosto"
                                        href="#ModalDetalhaPosto">Sigma</a></strong></td>
                         <td>Asa norte</td>
-                        <td>Ativo</td>
                         <td>Aline Silva Linhares</td>
                         <td>(61) 0000-0000</td>
+                        <td>Ativo</td>
                         <td>
                           <div class="btn-group btn-group-sm pull-right">
                             <button type="button" class="btn btn-default-outline dropdown-toggle"
@@ -245,7 +245,7 @@
                       </select>
                     </div>
                     <div class="col-sm-8">
-                      <label class="form-label semibold" for="">Nome do posto</label>
+                      <label class="form-label semibold" for="">Nome</label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
                         <option>Leonardo da Vinci</option>
@@ -432,7 +432,7 @@
           <div class="card-block">
             <div class="row">
               <div class="col-sm-3">
-                <label class="form-label semibold" for="">Nome do posto</label>
+                <label class="form-label semibold" for="">Nome</label>
                 <p>Leonardo da Vinci</p>
               </div>
               <div class="col-sm-3">
@@ -454,7 +454,7 @@
 
         <section class="card card-default mt-md">
           <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização do posto
+            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização
             </h5>
           </header>
           <div class="card-block">
