--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -79,11 +79,11 @@
                     <div class="card-block">
                       <div class="row">
                         <div class="col-sm-8">
-                          <label class="form-label semibold" for="">Nome do curso</label>
+                          <label class="form-label semibold" for="">Nome</label>
                           <input type="text" class="form-control" aria-label="" placeholder="Nome do curso">
                         </div>
                         <div class="col-sm-4">
-                          <label class="form-label semibold" for="">Situação do curso</label>
+                          <label class="form-label semibold" for="">Situação</label>
                           <div class="form-group">
                             <div class="btn-group btn-group-sm" data-toggle="buttons">
                               <label class="btn btn-secondary-outline active">
@@ -101,7 +101,7 @@
                       </div>
                       <div class="row">
                         <div class="col-sm-12">
-                          <label class="form-label semibold" for="">Grupos do curso <span
+                          <label class="form-label semibold" for="">Grupos<span
                                   class="semibold text-danger h4">*</span></label>
                           <select class="select2" multiple="multiple">
                             <option>Crianças</option>
@@ -153,7 +153,7 @@
                     <table class="datatable-on table table-hover" cellspacing="0" width="100%">
                       <thead>
                       <tr>
-                        <th>Nome do curso</th>
+                        <th>Nome</th>
                         <th>Grupo(s)</th>
                         <th>Tipo</th>
                         <th>Valor</th>
@@ -190,14 +190,13 @@
                       </tr>
 
                       <tr>
-                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaGrupo"
-                                       href="#ModalDetalhaGrupo">THOMAS
-                          FLEX</a></strong></td>
+                        <td><a data-toggle="modal" data-target="#ModalDetalhaGrupo"
+                                       href="#ModalDetalhaGrupo" class="text-warning"><small><i class="fa fa-exclamation-triangle mr-xs" aria-hidden="true"></i></small> <strong>THOMAS
+                          FLEX</strong></a></td>
                         <td>Adultos</td>
                         <td>Online</td>
                         <td>R$ 000,00</td>
-                        <td><p class="text-warning"><i class="fa fa-exclamation-circle mr-xs" aria-hidden="true"></i>
-                          Pendente</p></td>
+                        <td>Inativo</td>
                         <td>
                           <div class="btn-group btn-group-sm pull-right">
                             <button type="button" class="btn btn-default-outline dropdown-toggle"
@@ -235,14 +234,14 @@
               <div class="row mt-md divider-top">
                 <div class="col-lg-8">
                   <fieldset class="form-group">
-                    <label class="form-label semibold" for="">Nome do curso <span
+                    <label class="form-label semibold" for="">Nome<span
                             class="semibold text-danger h4">*</span></label>
-                    <input type="text" class="form-control" id="" placeholder="Nome do curso">
+                    <input type="text" class="form-control" id="" placeholder="Nome">
                   </fieldset>
                 </div>
 
                 <div class="col-sm-4">
-                  <label class="form-label semibold" for="">Tipo de curso <span
+                  <label class="form-label semibold" for="">Tipo<span
                           class="semibold text-danger h4">*</span></label>
                   <select class="select2 select2-arrow">
                     <option>Online</option>
@@ -274,7 +273,7 @@
                   <input type="text" class="form-control" id="" placeholder="Escolaridade">
                 </div>
                 <div class="col-lg-3">
-                  <label class="form-label semibold" for="">Valor do curso</label>
+                  <label class="form-label semibold" for="">Valor</label>
                   <input type="text" class="form-control" id="money-mask-input" placeholder="R$">
                 </div>
                 <div class="col-sm-4">
@@ -305,8 +304,8 @@
               </div>
               <div class="row divider-top">
                 <div class="col-sm-12">
-                  <label class="form-label semibold" for="">Objetivos do curso</label>
-                  <textarea rows="4" class="form-control" placeholder="Objetivos do curso"></textarea>
+                  <label class="form-label semibold" for="">Objetivos</label>
+                  <textarea rows="4" class="form-control" placeholder="Objetivos"></textarea>
                 </div>
               </div>
               <div class="row divider-top">
@@ -462,7 +461,7 @@
           <div class="card-block">
             <div class="row">
               <div class="col-md-4">
-                <label class="form-label semibold">Situação do curso</label>
+                <label class="form-label semibold">Situação</label>
                 <p class="text-success"><strong><i class="fa fa-check" aria-hidden="true"></i> Curso ativo</strong></p>
               </div>
               <div class="col-md-4">
@@ -470,7 +469,7 @@
                 <p>00/00/0000</p>
               </div>
               <div class="col-md-4">
-                <label class="form-label semibold">Grupo(s) do curso</label>
+                <label class="form-label semibold">Grupo(s)</label>
                 <p>Crianças / Jovens e adultos</p>
               </div>
             </div>
@@ -481,7 +480,7 @@
                 <p>Presencial / Online</p>
               </div>
               <div class="col-md-4">
-                <label class="form-label semibold">Valor do curso</label>
+                <label class="form-label semibold">Valor</label>
                 <p class="text-warning"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Informação
                   pendente</strong></p>
               </div>
